fixed bugs, aligned keyboard, centers around most recently added element

--- a/public/stylesheets/onScreenKeyboard.css
+++ b/public/stylesheets/onScreenKeyboard.css
@@ -99,13 +99,13 @@
 	width: 45%;     /* Account for 2% padding and a vertical scroll bar */
 	min-width: 500px;
 	max-width: 900px;
-	background: #EEE;
+	background: #fEE;
 	border-radius: 5%;
 	color: #000;
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-	position: absolute;
-	left: 100px;
-	top: 700px;
+	/*position: absolute;
+	left: 10px;
+	top: 700px;*/
 }
 
 #osk-container > li {
