--- a/public/stylesheets/timeline.styl
+++ b/public/stylesheets/timeline.styl
@@ -683,6 +683,7 @@ width: 230px;
 
 #draw-thumb{
 background-size: 100% auto;
+background-color: #f00;
   width: 100%;
   height: 60%;
 }
